--- a/html-template/styles/style.css
+++ b/html-template/styles/style.css
@@ -5,24 +5,35 @@
   text-decoration: none;
 }
 
+#app {
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+}
+
 #gamego {
-  background-color: #f0f0f0;
+  background-color: #e2cdaf;
   width: min-content;
   height: min-content;
   margin: 15px;
 }
 #gamego #board {
   display: grid;
-  grid-template-rows: repeat(19, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   border: 3px solid black;
   border-radius: 2px;
-  width: 380px;
-  height: 380px;
+  width: 135px;
+  height: 135px;
+  font-size: 45px;
+  margin-top: 5px;
 }
 #gamego #board .rows {
   display: grid;
-  grid-template-columns: repeat(19, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   border-bottom: 1px solid black;
+  overflow: hidden;
 }
 #gamego #board .rows:last-child {
   border-bottom: 0;
@@ -30,6 +41,8 @@
 #gamego #board .rows .cols {
   display: inline;
   border-right: 1px solid black;
+  overflow: hidden;
+  cursor: pointer;
 }
 #gamego #board .rows .cols:last-child {
   border-right: 0;
