--- a/html-template/styles/style.scss
+++ b/html-template/styles/style.scss
@@ -1,3 +1,10 @@
+$squareSize: 45;
+$rows: 3;
+$cols: 3;
+$board-width: #{$rows * $squareSize}px;
+$board-height: #{$cols * $squareSize}px;
+$winnerColor: #221e1a;
+
 * {
   margin: 0;
   padding: 0;
@@ -5,8 +12,17 @@
   text-decoration: none;
 }
 
+#app {
+  font-family: "Avenir", Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  // margin-top: 60px;
+}
+
 #gamego {
-  background-color: rgb(240, 240, 240);
+  background-color: #e2cdaf;
   width: min-content;
   height: min-content;
 
@@ -14,16 +30,20 @@
 
   #board {
     display: grid;
-    grid-template-rows: repeat(19, 1fr);
+    grid-template-rows: repeat($rows, 1fr);
     border: 3px solid black;
     border-radius: 2px;
-    width: 380px;
-    height: 380px;
+    width: $board-width;
+    height: $board-height;
+    font-size: #{$squareSize}px;
+
+    margin-top: 5px;
 
     .rows {
       display: grid;
-      grid-template-columns: repeat(19, 1fr);
+      grid-template-columns: repeat($cols, 1fr);
       border-bottom: 1px solid black;
+      overflow: hidden;
 
       &:last-child {
         border-bottom: 0;
@@ -32,6 +52,8 @@
       .cols {
         display: inline;
         border-right: 1px solid black;
+        overflow: hidden;
+        cursor: pointer;
 
         &:last-child {
           border-right: 0;
